tools/tests/errors/annotation_violation.ki
var f = Function(x : Integer):
    return x
f("not an int")
